# pickyuser

./: README.md  db.sqlite3  pyproject.toml
custom_user/: settings.py  urls.py
pickyuser_app/: admin.py  apps.py  forms.py  models.py  views.py
pickyuser_app/migrations/: 0001_initial.py
templates/: base.html  index.html
