[tool.poetry]
name = "custom_user"
version = "0.1.0"
description = "Extending users with custom user. Implement your own login and signup page (don't use the defaults) for the server that leads to a locked-down \"homepage\"..."
authors = ["Reginald Tjitradi <rtjitradi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
